# stell

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  meson.build  stm32f401xc.ini  stm32f401xc.ld  usb.gdb
.github/workflows/: qa.yaml
include/: FreeRTOSConfig.h  usb.h
lib/: meson.build  usb.c
src/: FreeRTOSConfig.h  main.c  meson.build  tusb_config.h  usb_descriptors.c
tests/: meson.build  test_usb.cpp
